--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
    <tr>
        <td>3</td>
        <td>Semester 3</td>
-       <td>22</td>
+       <td style="width: ;">22</td>
        <td><input type="text" id = "sem3" size="2"></td>  
        <td><input type="text" id="rsem3" size="2"></td> 
        
